--- a/makeTablesAndPlots.Rmd
+++ b/makeTablesAndPlots.Rmd
@@ -1,21 +1,20 @@
 ---
-title: "Reproducing the plots"
-author: "Alastair Currie"
-date: "15 August 2017"
+title: "UK property transactions counts -- July 2017 "
+author: "KAI Data Exploitation cover version"
 output:
   html_document:
     keep_md: yes
   pdf_document: default
 ---
-
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
+library(readxl)
+library(kableExtra)
+library(lubridate)
+library(tidyverse)
+```
 #Reproducing the plots
-```{r, echo=TRUE,results='hide',fig.keep='all'}
-library('readxl')
-library('kableExtra')
-library('lubridate')
-library('tidyverse')
-
-
+```{r plots}
 resCountRaw <- read_xlsx('./UK_Tables_Jul_2017_monthlies.xlsx','Residential')
 nonresCountRaw <- read_xlsx('./UK_Tables_Jul_2017_monthlies.xlsx','Non-residential')
 
@@ -29,10 +28,12 @@ nonresCount <- nonresCountRaw %>%
 
 monthlyCount <- dplyr::union(resCount,nonresCount) %>%
                 mutate(
+                  sa=(area=='UKSeasonallyAdjusted'),
                   year=strftime(month,format='%Y'),
                   fyst=year(month)-as.integer( month(month)<4 ),
                   fy=paste0(as.character(fyst),'\U2013',as.character((fyst+1) %% 100)),
-                  quarter=quarters(month)
+                  quarter=quarters(month),
+                  area=replace(area,area=='UKSeasonallyAdjusted','UK')
                 )
 
 thisMonth <- ymd('2017-07-01',tz='UTC')
@@ -42,37 +43,37 @@ recentMonths <- seq(recentRangeStart,thisMonth,by='month')
 historicMonths <- seq(historicRangeStart,thisMonth,by='month')
 
 monthlyCount %>% 
-  filter(area %in% c('UK','UKSeasonallyAdjusted')) %>%
+  filter(area == 'UK') %>%
   filter(month %in% recentMonths) %>%
   filter(category == 'residential') %>%
-  ggplot(mapping = aes(x=month,y=count,colour=area)) +
+  ggplot(mapping = aes(x=month,y=count,colour=sa)) +
   expand_limits(y=0) +
   geom_line() -> chart1a
 plot(chart1a)
 
 monthlyCount %>% 
-  filter(area %in% c('UK','UKSeasonallyAdjusted')) %>%
+  filter(area == 'UK') %>%
   filter(month %in% recentMonths) %>%
   filter(category == 'non-residential') %>%
-  ggplot(mapping = aes(x=month,y=count,colour=area)) +
+  ggplot(mapping = aes(x=month,y=count,colour=sa)) +
   expand_limits(y=0) +
   geom_line() -> chart1b
 plot(chart1b)
 
 monthlyCount %>% 
-  filter(area %in% c('UK','UKSeasonallyAdjusted')) %>%
+  filter(area == 'UK') %>%
   filter(month %in% historicMonths) %>%
   filter(category == 'residential') %>%
-  ggplot(mapping = aes(x=month,y=count,colour=area)) +
+  ggplot(mapping = aes(x=month,y=count,colour=sa)) +
   expand_limits(y=0) +
   geom_line() -> chart4a
 plot(chart4a)
 
 monthlyCount %>% 
-  filter(area %in% c('UK','UKSeasonallyAdjusted')) %>%
+  filter(area == 'UK') %>%
   filter(month %in% historicMonths) %>%
   filter(category == 'non-residential') %>%
-  ggplot(mapping = aes(x=month,y=count,colour=area)) +
+  ggplot(mapping = aes(x=month,y=count,colour=sa)) +
   expand_limits(y=0) +
   geom_line() -> chart4b
 plot(chart4b)
